--- a/src/main/java/app/window.fxml
+++ b/src/main/java/app/window.fxml
@@ -1,4 +1,4 @@
 <?import javafx.scene.layout.GridPane?>
 <GridPane xmlns:fx="http://javafx.com/fxml"
-          fx:controller="sample.Controller" alignment="center" hgap="10" vgap="10">
+          fx:controller="app.Controller" alignment="center" hgap="10" vgap="10">
 </GridPane>
