--- a/src/main/resources/windows/mainWindow.fxml
+++ b/src/main/resources/windows/mainWindow.fxml
@@ -1,28 +1,99 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-            minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171"
-            fx:controller="app.Controller">
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller">
    <top>
-      <HBox prefHeight="123.0" prefWidth="1280.0" style="-fx-background-color: #212121;" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER" prefHeight="123.0" prefWidth="1280.0" style="-fx-background-color: #212121;" BorderPane.alignment="CENTER_LEFT">
          <children>
-            <ImageView fitHeight="79.0" fitWidth="177.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="122.0" fitWidth="407.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@assets/logo.png" />
                </image>
                <HBox.margin>
-                  <Insets left="20.0" top="20.0" />
+                  <Insets bottom="5.0" left="20.0" top="5.0" />
                </HBox.margin>
             </ImageView>
-            <Label alignment="CENTER_RIGHT" prefHeight="35.0" prefWidth="800.0" text="1.1.2019 0:00:00"
-                   textFill="WHITE">
+         </children>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </HBox>
+   </top>
+   <center>
+      <Pane prefHeight="430.0" prefWidth="900.0" style="-fx-background-color: #333333;" BorderPane.alignment="CENTER">
+         <children>
+            <Circle fill="DODGERBLUE" layoutX="716.0" layoutY="207.0" radius="45.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="171.0" layoutY="165.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #288e28;" width="130.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="343.0" layoutY="272.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" width="130.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="171.0" layoutY="272.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #288e28;" width="130.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="172.0" layoutY="53.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" width="130.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="343.0" layoutY="53.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" width="181.0" />
+            <Label layoutX="705.0" layoutY="178.0" prefHeight="53.0" prefWidth="22.0" text="9">
+               <font>
+                  <Font size="40.0" />
+               </font>
+            </Label>
+            <Label layoutX="226.0" layoutY="65.0" text="1">
+               <font>
+                  <Font size="40.0" />
+               </font>
+            </Label>
+            <Label layoutX="397.0" layoutY="284.0" text="5">
+               <font>
+                  <Font size="40.0" />
+               </font>
+            </Label>
+            <Label layoutX="226.0" layoutY="177.0" text="2">
+               <font>
+                  <Font size="40.0" />
+               </font>
+            </Label>
+            <Label layoutX="225.0" layoutY="284.0" text="3">
+               <font>
+                  <Font size="40.0" />
+               </font>
+            </Label>
+            <Label layoutX="423.0" layoutY="67.0" text="4">
+               <font>
+                  <Font size="40.0" />
+               </font>
+            </Label>
+            <Circle fill="DODGERBLUE" layoutX="716.0" layoutY="99.0" radius="45.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #288e28;" />
+            <Label layoutX="705.0" layoutY="70.0" prefHeight="53.0" prefWidth="22.0" text="8">
+               <font>
+                  <Font size="40.0" />
+               </font>
+            </Label>
+            <Circle fill="DODGERBLUE" layoutX="716.0" layoutY="314.0" radius="45.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" />
+            <Label layoutX="693.0" layoutY="285.0" prefHeight="58.0" prefWidth="50.0" text="10">
+               <font>
+                  <Font size="40.0" />
+               </font>
+            </Label>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="509.0" layoutY="272.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" width="130.0" />
+            <Label layoutX="563.0" layoutY="284.0" text="7">
+               <font>
+                  <Font size="40.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
+   </center>
+   <bottom>
+      <HBox alignment="CENTER" prefHeight="68.0" prefWidth="900.0" style="-fx-background-color: #212121;">
+         <children>
+            <Label prefHeight="67.0" prefWidth="695.0" text="1.1.2019 0:00:00" textFill="WHITE">
                <HBox.margin>
                   <Insets />
                </HBox.margin>
@@ -30,67 +101,15 @@
                   <Insets right="20.0" />
                </padding>
                <font>
-                  <Font size="18.0"/>
+                  <Font size="18.0" />
                </font>
             </Label>
-         </children>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-      </HBox>
-   </top>
-   <bottom>
-      <Pane prefHeight="664.0" prefWidth="1280.0" style="-fx-background-color: #212121;" BorderPane.alignment="CENTER">
-         <children>
-            <Button fx:id="myButton" layoutX="695.0" layoutY="403.0" mnemonicParsing="false"
-                    onMouseClicked="#handleButtonAction" prefHeight="39.0" prefWidth="157.0" text="Cash register">
+            <Button fx:id="myButton" mnemonicParsing="false" onMouseClicked="#handleButtonAction" prefHeight="48.0" prefWidth="162.0" style="-fx-background-color: #7f7f7f;" text="Cash register" textFill="WHITE">
                <font>
-                  <Font size="18.0"/>
+                  <Font size="18.0" />
                </font>
             </Button>
-            <Circle fill="DODGERBLUE" layoutX="248.0" layoutY="101.0" radius="59.0" stroke="BLACK" strokeType="INSIDE"
-                    style="-fx-fill: #e1901e;"/>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="100.0" layoutX="170.0" layoutY="188.0"
-                       stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #288e28;" width="150.0"/>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="100.0" layoutX="170.0" layoutY="320.0"
-                       stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #288e28;" width="150.0"/>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="100.0" layoutX="351.0" layoutY="48.0"
-                       stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" width="150.0"/>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="100.0" layoutX="534.0" layoutY="48.0"
-                       stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" width="150.0"/>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="100.0" layoutX="370.0" layoutY="320.0"
-                       stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" width="232.0"/>
-            <Label layoutX="236.0" layoutY="75.0" prefHeight="53.0" prefWidth="22.0" text="1">
-               <font>
-                  <Font size="40.0"/>
-               </font>
-            </Label>
-            <Label layoutX="414.0" layoutY="73.0" text="2">
-               <font>
-                  <Font size="40.0"/>
-               </font>
-            </Label>
-            <Label layoutX="596.0" layoutY="73.0" text="3">
-               <font>
-                  <Font size="40.0"/>
-               </font>
-            </Label>
-            <Label layoutX="229.0" layoutY="212.0" text="4">
-               <font>
-                  <Font size="40.0"/>
-               </font>
-            </Label>
-            <Label layoutX="229.0" layoutY="342.0" text="5">
-               <font>
-                  <Font size="40.0"/>
-               </font>
-            </Label>
-            <Label layoutX="468.0" layoutY="342.0" text="6">
-               <font>
-                  <Font size="40.0"/>
-               </font>
-            </Label>
          </children>
-      </Pane>
+      </HBox>
    </bottom>
 </BorderPane>
