--- a/src/main/resources/windows/mainWindow.fxml
+++ b/src/main/resources/windows/mainWindow.fxml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.shape.Circle?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller">
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+            minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171"
+            fx:controller="controller.MainWindowController">
    <top>
       <HBox alignment="CENTER" prefHeight="123.0" prefWidth="1280.0" style="-fx-background-color: #212121;" BorderPane.alignment="CENTER_LEFT">
          <children>
@@ -33,13 +30,25 @@
    <center>
       <Pane prefHeight="430.0" prefWidth="900.0" style="-fx-background-color: #333333;" BorderPane.alignment="CENTER">
          <children>
-            <Circle fill="DODGERBLUE" layoutX="716.0" layoutY="207.0" radius="45.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="171.0" layoutY="165.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #288e28;" width="130.0" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="343.0" layoutY="272.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" width="130.0" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="171.0" layoutY="272.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #288e28;" width="130.0" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="172.0" layoutY="53.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" width="130.0" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="343.0" layoutY="53.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" width="181.0" />
-            <Label layoutX="705.0" layoutY="178.0" prefHeight="53.0" prefWidth="22.0" text="9">
+            <Circle fx:id="table8" fill="DODGERBLUE" layoutX="716.0" layoutY="207.0"
+                    onMouseClicked="#handleTableClickAction" radius="45.0" stroke="BLACK" strokeType="INSIDE"
+                    style="-fx-fill: #e1901e;"/>
+            <Rectangle fx:id="table2" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="171.0"
+                       layoutY="165.0" onMouseClicked="#handleTableClickAction" stroke="BLACK" strokeType="INSIDE"
+                       style="-fx-fill: #288e28;" width="130.0"/>
+            <Rectangle fx:id="table5" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="343.0"
+                       layoutY="272.0" onMouseClicked="#handleTableClickAction" stroke="BLACK" strokeType="INSIDE"
+                       style="-fx-fill: #e1901e;" width="130.0"/>
+            <Rectangle fx:id="table3" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="171.0"
+                       layoutY="272.0" onMouseClicked="#handleTableClickAction" stroke="BLACK" strokeType="INSIDE"
+                       style="-fx-fill: #288e28;" width="130.0"/>
+            <Rectangle fx:id="table1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="172.0"
+                       layoutY="53.0" onMouseClicked="#handleTableClickAction" stroke="BLACK" strokeType="INSIDE"
+                       style="-fx-fill: #e1901e;" width="130.0"/>
+            <Rectangle fx:id="table4" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="343.0"
+                       layoutY="53.0" onMouseClicked="#handleTableClickAction" stroke="BLACK" strokeType="INSIDE"
+                       style="-fx-fill: #e1901e;" width="181.0"/>
+            <Label layoutX="705.0" layoutY="178.0" prefHeight="53.0" prefWidth="22.0" text="8">
                <font>
                   <Font size="40.0" />
                </font>
@@ -69,20 +78,26 @@
                   <Font size="40.0" />
                </font>
             </Label>
-            <Circle fill="DODGERBLUE" layoutX="716.0" layoutY="99.0" radius="45.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #288e28;" />
-            <Label layoutX="705.0" layoutY="70.0" prefHeight="53.0" prefWidth="22.0" text="8">
+            <Circle fx:id="table7" fill="DODGERBLUE" layoutX="716.0" layoutY="99.0"
+                    onMouseClicked="#handleTableClickAction" radius="45.0" stroke="BLACK" strokeType="INSIDE"
+                    style="-fx-fill: #288e28;"/>
+            <Label layoutX="705.0" layoutY="70.0" prefHeight="53.0" prefWidth="22.0" text="7">
                <font>
                   <Font size="40.0" />
                </font>
             </Label>
-            <Circle fill="DODGERBLUE" layoutX="716.0" layoutY="314.0" radius="45.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" />
-            <Label layoutX="693.0" layoutY="285.0" prefHeight="58.0" prefWidth="50.0" text="10">
+            <Circle fx:id="table9" fill="DODGERBLUE" layoutX="716.0" layoutY="314.0"
+                    onMouseClicked="#handleTableClickAction" radius="45.0" stroke="BLACK" strokeType="INSIDE"
+                    style="-fx-fill: #e1901e;"/>
+            <Label layoutX="702.0" layoutY="284.0" prefHeight="58.0" prefWidth="29.0" text="9">
                <font>
                   <Font size="40.0" />
                </font>
             </Label>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="509.0" layoutY="272.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" width="130.0" />
-            <Label layoutX="563.0" layoutY="284.0" text="7">
+            <Rectangle fx:id="table6" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="509.0"
+                       layoutY="272.0" onMouseClicked="#handleTableClickAction" stroke="BLACK" strokeType="INSIDE"
+                       style="-fx-fill: #e1901e;" width="130.0"/>
+            <Label layoutX="563.0" layoutY="284.0" text="6">
                <font>
                   <Font size="40.0" />
                </font>
@@ -93,7 +108,7 @@
    <bottom>
       <HBox alignment="CENTER" prefHeight="68.0" prefWidth="900.0" style="-fx-background-color: #212121;">
          <children>
-            <Label prefHeight="67.0" prefWidth="695.0" text="1.1.2019 0:00:00" textFill="WHITE">
+            <Label fx:id="dateTime" prefHeight="67.0" prefWidth="695.0" text="1.1.2019 0:00:00" textFill="WHITE">
                <HBox.margin>
                   <Insets />
                </HBox.margin>
@@ -104,7 +119,8 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <Button fx:id="myButton" mnemonicParsing="false" onMouseClicked="#handleButtonAction" prefHeight="48.0" prefWidth="162.0" style="-fx-background-color: #7f7f7f;" text="Cash register" textFill="WHITE">
+            <Button fx:id="myButton" mnemonicParsing="false" prefHeight="48.0" prefWidth="162.0"
+                    style="-fx-background-color: #7f7f7f;" text="Cash register" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
