--- a/src/main/resources/windows/mainWindow.fxml
+++ b/src/main/resources/windows/mainWindow.fxml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.Group?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-            minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171"
-            fx:controller="controller.MainWindowController">
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainWindowController">
    <top>
       <HBox alignment="CENTER" prefHeight="123.0" prefWidth="1280.0" style="-fx-background-color: #212121;" BorderPane.alignment="CENTER_LEFT">
          <children>
@@ -30,78 +34,96 @@
    <center>
       <Pane prefHeight="430.0" prefWidth="900.0" style="-fx-background-color: #333333;" BorderPane.alignment="CENTER">
          <children>
-            <Circle fx:id="table8" fill="DODGERBLUE" layoutX="716.0" layoutY="207.0"
-                    onMouseClicked="#handleTableClickAction" radius="45.0" stroke="BLACK" strokeType="INSIDE"
-                    style="-fx-fill: #e1901e;"/>
-            <Rectangle fx:id="table2" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="171.0"
-                       layoutY="165.0" onMouseClicked="#handleTableClickAction" stroke="BLACK" strokeType="INSIDE"
-                       style="-fx-fill: #288e28;" width="130.0"/>
-            <Rectangle fx:id="table5" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="343.0"
-                       layoutY="272.0" onMouseClicked="#handleTableClickAction" stroke="BLACK" strokeType="INSIDE"
-                       style="-fx-fill: #e1901e;" width="130.0"/>
-            <Rectangle fx:id="table3" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="171.0"
-                       layoutY="272.0" onMouseClicked="#handleTableClickAction" stroke="BLACK" strokeType="INSIDE"
-                       style="-fx-fill: #288e28;" width="130.0"/>
-            <Rectangle fx:id="table1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="172.0"
-                       layoutY="53.0" onMouseClicked="#handleTableClickAction" stroke="BLACK" strokeType="INSIDE"
-                       style="-fx-fill: #e1901e;" width="130.0"/>
-            <Rectangle fx:id="table4" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="343.0"
-                       layoutY="53.0" onMouseClicked="#handleTableClickAction" stroke="BLACK" strokeType="INSIDE"
-                       style="-fx-fill: #e1901e;" width="181.0"/>
-            <Label layoutX="705.0" layoutY="178.0" prefHeight="53.0" prefWidth="22.0" text="8">
-               <font>
-                  <Font size="40.0" />
-               </font>
-            </Label>
-            <Label layoutX="226.0" layoutY="65.0" text="1">
-               <font>
-                  <Font size="40.0" />
-               </font>
-            </Label>
-            <Label layoutX="397.0" layoutY="284.0" text="5">
-               <font>
-                  <Font size="40.0" />
-               </font>
-            </Label>
-            <Label layoutX="226.0" layoutY="177.0" text="2">
-               <font>
-                  <Font size="40.0" />
-               </font>
-            </Label>
-            <Label layoutX="225.0" layoutY="284.0" text="3">
-               <font>
-                  <Font size="40.0" />
-               </font>
-            </Label>
-            <Label layoutX="423.0" layoutY="67.0" text="4">
-               <font>
-                  <Font size="40.0" />
-               </font>
-            </Label>
-            <Circle fx:id="table7" fill="DODGERBLUE" layoutX="716.0" layoutY="99.0"
-                    onMouseClicked="#handleTableClickAction" radius="45.0" stroke="BLACK" strokeType="INSIDE"
-                    style="-fx-fill: #288e28;"/>
-            <Label layoutX="705.0" layoutY="70.0" prefHeight="53.0" prefWidth="22.0" text="7">
-               <font>
-                  <Font size="40.0" />
-               </font>
-            </Label>
-            <Circle fx:id="table9" fill="DODGERBLUE" layoutX="716.0" layoutY="314.0"
-                    onMouseClicked="#handleTableClickAction" radius="45.0" stroke="BLACK" strokeType="INSIDE"
-                    style="-fx-fill: #e1901e;"/>
-            <Label layoutX="702.0" layoutY="284.0" prefHeight="58.0" prefWidth="29.0" text="9">
-               <font>
-                  <Font size="40.0" />
-               </font>
-            </Label>
-            <Rectangle fx:id="table6" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" layoutX="509.0"
-                       layoutY="272.0" onMouseClicked="#handleTableClickAction" stroke="BLACK" strokeType="INSIDE"
-                       style="-fx-fill: #e1901e;" width="130.0"/>
-            <Label layoutX="563.0" layoutY="284.0" text="6">
-               <font>
-                  <Font size="40.0" />
-               </font>
-            </Label>
+            <Group fx:id="tab1" layoutX="172.0" layoutY="53.0" onMouseClicked="#handleTableClickAction">
+               <children>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" width="130.0" />
+                  <Label layoutX="54.0" layoutY="12.0" text="1">
+                     <font>
+                        <Font size="40.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Group>
+            <Group fx:id="tab2" layoutX="171.0" layoutY="166.0" onMouseClicked="#handleTableClickAction">
+               <children>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #288e28;" width="130.0" />
+                  <Label layoutX="54.0" layoutY="12.0" text="2">
+                     <font>
+                        <Font size="40.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Group>
+            <Group fx:id="tab3" layoutX="171.0" layoutY="272.0" onMouseClicked="#handleTableClickAction">
+               <children>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #288e28;" width="130.0" />
+                  <Label layoutX="54.0" layoutY="12.0" text="3">
+                     <font>
+                        <Font size="40.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Group>
+            <Group fx:id="tab4" layoutX="343.0" layoutY="53.0" onMouseClicked="#handleTableClickAction">
+               <children>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" width="181.0" />
+                  <Label layoutX="80.0" layoutY="14.0" text="4">
+                     <font>
+                        <Font size="40.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Group>
+            <Group fx:id="tab5" layoutX="343.0" layoutY="272.0" onMouseClicked="#handleTableClickAction">
+               <children>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" width="130.0" />
+                  <Label layoutX="54.0" layoutY="12.0" text="5">
+                     <font>
+                        <Font size="40.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Group>
+            <Group fx:id="tab6" layoutX="513.0" layoutY="272.0" onMouseClicked="#handleTableClickAction">
+               <children>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="82.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" width="130.0" />
+                  <Label layoutX="54.0" layoutY="12.0" text="6">
+                     <font>
+                        <Font size="40.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Group>
+            <Group fx:id="tab7" layoutX="716.0" layoutY="94.0" onMouseClicked="#handleTableClickAction">
+               <children>
+                  <Circle fill="DODGERBLUE" radius="45.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #288e28;" />
+                  <Label layoutX="-11.0" layoutY="-29.0" prefHeight="53.0" prefWidth="22.0" text="7">
+                     <font>
+                        <Font size="40.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Group>
+            <Group fx:id="tab8" layoutX="716.0" layoutY="201.0" onMouseClicked="#handleTableClickAction">
+               <children>
+                  <Circle fill="DODGERBLUE" radius="45.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" />
+                  <Label layoutX="-11.0" layoutY="-29.0" prefHeight="53.0" prefWidth="22.0" text="8">
+                     <font>
+                        <Font size="40.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Group>
+            <Group fx:id="tab9" layoutX="716.0" layoutY="309.0" onMouseClicked="#handleTableClickAction">
+               <children>
+                  <Circle fill="DODGERBLUE" radius="45.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #e1901e;" />
+                  <Label layoutX="-14.0" layoutY="-29.0" prefHeight="58.0" prefWidth="29.0" text="9">
+                     <font>
+                        <Font size="40.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Group>
          </children>
       </Pane>
    </center>
@@ -119,8 +141,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <Button fx:id="myButton" mnemonicParsing="false" prefHeight="48.0" prefWidth="162.0"
-                    style="-fx-background-color: #7f7f7f;" text="Cash register" textFill="WHITE">
+            <Button fx:id="myButton" mnemonicParsing="false" prefHeight="48.0" prefWidth="162.0" style="-fx-background-color: #7f7f7f;" text="Cash register" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
