--- a/src/main/resources/windows/tableWindow.fxml
+++ b/src/main/resources/windows/tableWindow.fxml
@@ -1,20 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.Line?>
-<?import javafx.scene.text.Font?>
-
+<?import javafx.scene.text.*?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TableWindowController">
     <top>
         <HBox prefHeight="58.0" prefWidth="900.0" style="-fx-background-color: #212121;" BorderPane.alignment="CENTER">
@@ -172,11 +165,11 @@
                                    <PropertyValueFactory property="price" />
                                </cellValueFactory>
                            </TableColumn>
-                           <TableColumn fx:id="col3" minWidth="0.0" prefWidth="81.0" text="Qty">
-                               <cellValueFactory>
-                                   <PropertyValueFactory property="soft_delete" />
-                               </cellValueFactory>
-                           </TableColumn>
+                           <!--<TableColumn fx:id="col3" minWidth="0.0" prefWidth="81.0" text="Qty">-->
+                           <!--<cellValueFactory>-->
+                           <!--<PropertyValueFactory property="quantity" />-->
+                           <!--</cellValueFactory>-->
+                           <!--</TableColumn>-->
                        </columns>
                    </TableView>
                </content>
