--- a/src/main/resources/windows/chooseItemsWindow.fxml
+++ b/src/main/resources/windows/chooseItemsWindow.fxml
@@ -13,11 +13,11 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ChooseItemsController">
     <top>
         <HBox prefHeight="58.0" prefWidth="900.0" style="-fx-background-color: #212121;" BorderPane.alignment="CENTER">
             <children>
-            <ImageView fitHeight="40.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+            <ImageView onMouseClicked="#handleBackAction" fitHeight="40.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
                <image>
                   <Image url="@assets/left_arrow.png" />
                </image>
@@ -25,7 +25,7 @@
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
             </ImageView>
-                <Label alignment="CENTER_RIGHT" prefHeight="58.0" prefWidth="859.0" text="TABLE 4" textFill="WHITE">
+                <Label fx:id="tableLabel" alignment="CENTER_RIGHT" prefHeight="58.0" prefWidth="859.0" text="TABLE 4" textFill="WHITE">
                     <HBox.margin>
                         <Insets />
                     </HBox.margin>
