--- a/src/main/resources/windows/popUpWindow.fxml
+++ b/src/main/resources/windows/popUpWindow.fxml
@@ -1,13 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-
 <!--<?xml version="1.0" encoding="UTF-8"?>-->
 <!--<?import java.lang.*?>-->
 <!--<?import java.util.*?>-->
@@ -20,6 +12,10 @@
 <!--prefHeight="400.0" prefWidth="600.0">-->
 <!--</AnchorPane>-->
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #333333; -fx-border-color: #e1901e; -fx-border-width: 5;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PopUpController">
 <children>
     <HBox alignment="CENTER" prefHeight="40.0" prefWidth="372.0" style="-fx-background-color: #000;">
@@ -67,15 +63,21 @@
          </VBox.margin>
     </HBox>
       <Label fx:id="message" text="Payment denied" textFill="#c90b0b" />
-    <HBox alignment="CENTER">
+    <HBox alignment="CENTER_LEFT">
         <children>
             <Button fx:id="confirmBtn" mnemonicParsing="false" onMouseClicked="#confirm" prefHeight="40.0" prefWidth="100.0" style="-fx-background-color: #288e28;" text="Confirm">
                <HBox.margin>
                   <Insets right="10.0" top="10.0" />
                </HBox.margin></Button>
+            <Button fx:id="printBtn" onMouseClicked="#printReceipt" alignment="CENTER" contentDisplay="CENTER"
+                    disable="true" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" text="Print">
+                <HBox.margin>
+                    <Insets top="10.0"/>
+                </HBox.margin>
+            </Button>
             <Button fx:id="cancelBtn" layoutX="102.0" layoutY="10.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" style="-fx-background-color: #e1901e;" text="Cancel">
                <HBox.margin>
-                  <Insets left="10.0" top="10.0" />
+                   <Insets left="65.0" top="10.0"/>
                </HBox.margin>
             </Button>
         </children>
